HTML server ready on /interfaz

--- a/interfaz/index.html
+++ b/interfaz/index.html
@@ -48,7 +48,7 @@
     <div class="card card-panel">
       <div class="container">
         <div class="row center-align">
-          <div class="col m8 offset-m2">
+          <div class="col s12 m8 offset-m2">
             <div class="file-field input-field">
               <div class="btn">
                 <button class="wg-btn">Seleccionar Archivo (.txt)</button>
@@ -63,7 +63,7 @@
               <label for="nwords">Número de palabras</label>
             </div>
           </div>
-          <div class="col m8 offset-m2">  
+          <div class="col  s12 m8 offset-m2">  
             <button class="wg-btn big-btn">Buscar</button>
           </div>
         </div>
